# s6

./: .dockerignore  .gitignore  Makefile  README.md  ops-dev  ops-prod  pyproject.toml
.github/workflows/: django-test.yaml  k8s.yml
