[tool.poetry]
name = "opszero"
version = "0.1.0"
description = ""
authors = ["Abhi Yerra <abhi@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
psycopg2 = "^2.9.3"
nbconvert = "^6.5.0"
pyEX = "^0.5.0"
requests = "^2.27.1"
websocket-client = "^1.3.2"
gunicorn = "^20.1.0"
pytest = "^7.1.2"
python-Levenshtein = "^0.12.2"
pandas = "^1.4.2"
nltk = "^3.7"
closeio = "^2.0"
boto3 = "^1.24.22"
pyotp = "^2.6.0"
kubernetes = "^24.2.0"
cleanco = "^2.2"
money = "^1.3.0"
num2words = "^0.5.10"
Babel = "^2.10.3"
celery = {extras = ["redis"], version = "^5.2.7"}
redis = "^4.3.4"
django-distill = "^3.0.1"
django-admin-csvexport = "^1.11"
django-rename-app = "^0.1.3"
diagrams = "^0.21.1"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
ics = "^0.7.2"
django-admin-extra-buttons = "^1.5.4"
feedparser = "^6.0.10"
django-quill-editor = "^0.1.40"
django-autoslug = "^1.9.8"
alpaca-py = "^0.6.1"
flower = "^1.2.0"
django-ace = "^1.0.13"
tqdm = "^4.64.1"
daphne = "^4.0.0"
django-storages = "^1.13.1"
slack-sdk = "^3.19.5"
channels = "^4.0.0"
channels-redis = "^4.0.0"
Pillow = "^9.4.0"
openpyxl = "^3.0.10"
xlsxwriter = "^3.0.5"
semver = "^2.13.0"
inflect = "^6.0.2"
openai = "^0.26.5"
markdownify = "^0.11.6"
markdown2 = "^2.4.7"
pygithub = "^1.57"
django-countries = "^7.5.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.6.0"
coverage = "^6.4.3"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"